# alpha-zero-style-chess

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/aki_chess_ai/: ChessPolicyNetwork.py  ChessValueNetwork.py  MCTS.py  MCTSThreaded.py  __main__.py  main.py  trainer.py  utils.py
src/aki_chess_ai/Visualization/: ChessGameVisualizer.py
src/aki_chess_ai/agents/: ChessPlayer.py  NetworkOptimizer.py
src/aki_chess_ai/agnets/: ChessPlayer.py
src/aki_chess_ai/config/: Config.py
src/aki_chess_ai/policy_training_models/: model_10.h5  model_2.pt  model_9.pt
src/aki_chess_ai/umgebung/: ChessEnv.py
src/aki_chess_ai/value_training_models/: model_10.h5  model_2.pt  model_9.pt
