[tool.poetry]
name = "aki-chess-ai"
version = "0.1.0"
description = "Applied Artificial Intelligence - Semester Project Group 5"
authors = ["Dennis, Jonas, Katrin"]
license = "MIT"
readme = "README.md"
packages = [{include = "aki_chess_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
chess = "^1.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3"
pre-commit = "*"
isort = "^5.12"

[tool.pytest.ini_options]
testpaths = [
    "tests/"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
